package bagus2x.tl.presentation.common

object Tag {
    const val SIGNUP_SCREEN = "screen_signup"
    const val VERIFICATION_SCREEN = "screen_verification"
    const val SIGNIN_SCREEN = "screen_signin"
    const val ANNOUNCEMENT_LIST_SCREEN = "screen_announcement_list"
    const val ANNOUNCEMENT_FORM_SCREEN = "screen_announcement_form"
    const val COMPETITION_LIST_SCREEN = "screen_competition_list"
    const val COMPETITION_FORM_SCREEN = "screen_competition_form"
    const val USERS_LIST_SCREEN = "screen_users_list_form"
    const val PROFILE_SCREEN = "screen_profile"
    const val NOTIFICATION_SCREEN = "screen_notification"
    const val CHAT_LIST_SCREEN = "screen_chat_list"
    const val CHAT_DETAIL_SCREEN = "screen_chat_detail"
    const val INVITATION_DETAIL_SCREEN = "screen_invitation_detail"
    const val INVITATION_FORM_SCREEN = "screen_invitation_form"
    const val RESPONSE_FORM_SCREEN = "screen_response_form"
    const val TESTIMONY_FORM_SCREEN = "screen_testimony_form"

    const val TF_NAME = "tf_name"
    const val TF_EMAIL = "tf_email"
    const val TF_PASSWORD = "tf_password"
    const val TF_VERIFICATION_CODE = "tf_verification_code"
    const val TF_DESCRIPTION = "tf_description"
    const val TF_TITLE = "tf_title"
    const val TF_ORGANIZER_NAME = "tf_organizer_name"
    const val TF_THEME = "tf_theme"
    const val TF_CITY = "tf_city"
    const val TF_COUNTRY = "tf_country"
    const val TF_DEADLINE = "tf_deadline"
    const val TF_MIN = "tf_min"
    const val TF_MAX = "tf_max"
    const val TF_URL = "tf_url"

    const val BTN_SIGNUP = "btn_signup"
    const val BTN_SIGNIN = "btn_signin"
    const val BTN_NAVIGATE_TO_SIGN_UP = "btn_navigate_to_signup"
    const val BTN_NAVIGATE_TO_SIGN_IN = "btn_navigate_to_signin"
    const val BTN_SUBMIT = "btn_submit"
    const val BTN_ADD = "btn_add"
    const val BTN_ACTION = "btn_action"
    const val BTN_HOME = "btn_home"
    const val BTN_COMPETITIONS = "btn_competition"
    const val BTN_USERS = "btn_users"
    const val BTN_CHAT = "btn_chat"
    const val BTN_PROFILE = "btn_profile"
    const val BTN_FAVORITE = "btn_favorite"
    const val BTN_UNFAVORITE = "btn_unfavorite"
    const val BTN_REQ_FRIEND = "btn_req_friend"
    const val BTN_ADD_TESTIMONY = "btn_add_testimony"
    const val BTN_INVITE = "btn_invite"
    const val BTN_STAR = "btn_star"
}
